Add ability to set selection

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,7 +1,24 @@
 export(column)
+export(googleAnnotatedTimeLine)
 export(googleAreaChart)
 export(googleBarChart)
+export(googleBubbleChart)
+export(googleCandlestickChart)
 export(googleChartsInit)
+export(googleColumnChart)
+export(googleComboChart)
 export(googleDataTable)
 export(googleGauge)
+export(googleGeoChart)
+export(googleGeoMap)
+export(googleIntensityMap)
+export(googleLineChart)
+export(googleMap)
+export(googleMotionChart)
+export(googleOrgChart)
+export(googlePieChart)
 export(googleScatterChart)
+export(googleSetSelection)
+export(googleSteppedAreaChart)
+export(googleTable)
+export(googleTreeMap)
