--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(googleMap)
 export(googleMotionChart)
 export(googleOrgChart)
 export(googlePieChart)
+export(googleSankey)
 export(googleScatterChart)
 export(googleSetSelection)
 export(googleSteppedAreaChart)
