Add calendar, histogram, timeline

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@ export(googleAnnotatedTimeLine)
 export(googleAreaChart)
 export(googleBarChart)
 export(googleBubbleChart)
+export(googleCalendar)
 export(googleCandlestickChart)
 export(googleChartsInit)
 export(googleColumnChart)
@@ -11,6 +12,7 @@ export(googleDataTable)
 export(googleGauge)
 export(googleGeoChart)
 export(googleGeoMap)
+export(googleHistogram)
 export(googleIntensityMap)
 export(googleLineChart)
 export(googleMap)
@@ -22,4 +24,5 @@ export(googleScatterChart)
 export(googleSetSelection)
 export(googleSteppedAreaChart)
 export(googleTable)
+export(googleTimeline)
 export(googleTreeMap)
